testsuite/bsc.interra/messages/ENotStructId/ENotStructId.bs.bsc-out.expected
checking package dependencies
compiling ENotStructId.bs
Error: "ENotStructId.bs", line 23, column 4: (T0014)
  Identifier is not a struct name `ENotStructId.Null'
